# che-che4z-lsp-for-hlasm

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  Jenkinsfile  NOTICE.md  README.md  SECURITY.md  emcmake-args.sh
HlasmDummy/: CMakeLists.txt
HlasmDummy/src/: main.cpp
HlasmLanguageServer/: CMakeLists.txt
HlasmLanguageServer/src/: logger.cpp  lsp_dispatcher.cpp  lsp_dispatcher.h  main.cpp  server.cpp  server.h
HlasmLanguageServer/test/: server_test.h
HlasmParserLibrary/: CMakeLists.txt
HlasmParserLibrary/include/shared/: HlasmParserLibrary.h
HlasmParserLibrary/src/: HlasmLexer.cpp  HlasmParserLibrary.cpp
HlasmParserLibrary/src/grammar/: HlasmLexer.g4  HlasmParser.g4
benchmark/: CMakeLists.txt  benchmark.cpp  diagnostic_counter.h
dummy/: CMakeLists.txt
dummy/src/: main.cpp
language_server/: CMakeLists.txt
language_server/src/: CMakeLists.txt  base_protocol_channel.cpp  base_protocol_channel.h  blocking_queue.h  common_types.h  diagnostic_counter.h  dispatcher.cpp  dispatcher.h  emscripten_server_streams.cpp  encodings.cpp  encodings.h  external_file_reader.cpp  external_file_reader.h  feature.cpp  feature.h  feature_language_features.cpp  feature_language_features.h  feature_text_synchronization.cpp  feature_text_synchronization.h  feature_workspace_folders.cpp  feature_workspace_folders.h  json_channel.cpp  json_channel.h  json_queue_channel.cpp  json_queue_channel.h  logger.cpp  logger.h  lsp_dispatcher.cpp  lsp_dispatcher.h  main.cpp  message_router.cpp  message_router.h  native_server_streams.cpp  parsing_metadata_collector.h  parsing_metadata_serialization.cpp  parsing_metadata_serialization.h  pseudo_convertors.cpp  pseudo_convertors.h  request_manager.cpp  request_manager.h  (+15 more)
language_server/src/dap/: CMakeLists.txt  dap_feature.cpp  dap_feature.h  dap_message_wrappers.cpp  dap_message_wrappers.h  dap_server.cpp  dap_server.h  dap_session.cpp  dap_session.h  dap_session_manager.cpp  dap_session_manager.h  feature_launch.cpp  feature_launch.h  tcp_handler.cpp  tcp_handler.h
language_server/src/lsp/: CMakeLists.txt  channel.cpp  channel.h  feature_language_features.cpp  (+11 more)
language_server/test/: CMakeLists.txt  blocking_queue_test.cpp  channel_test.cpp  dispatcher_test.cpp  external_file_reader_test.cpp  feature_text_synchronization_test.h  json_channel_mock.h  message_router_test.cpp  pseudo_convertors_test.cpp  regress_test.cpp  regress_test.h  request_manager_test.cpp  response_provider_mock.h  send_message_provider_mock.h  server_options_test.cpp  server_test.cpp  server_test.h  stream_helper_test.cpp  telemetry_test.cpp  test.cpp  virtual_file_provider_test.cpp  workspace_folders_test.h  ws_mngr_mock.h  ws_mngr_req_mock.h
parser_library/: CMakeLists.txt  fuzzer.dict  tag_generated_files.cmake
parser_library/fuzzer/: CMakeLists.txt  fuzzer.cpp  fuzzer.dict
parser_library/include/: CMakeLists.txt  analyzer.h  branch_info.h  c_view_array.h  compiler_options.h  completion_item.h  completion_trigger_kind.h  debug_types.h  debugger.h  diagnostic.h  document_symbol_item.h  external_configuration_requests.h  fade_messages.h  folding_range.h  instruction_set_version.h  lib_config.h  location.h  message_consumer.h  parse_lib_provider.h  parser_library.h  preprocessor_options.h  processing_format.h  protocol.h  range.h  sequence.h  watcher_registration_provider.h  workspace_manager.h  workspace_manager_external_file_requests.h  workspace_manager_requests.h  workspace_manager_response.h
parser_library/jni/: CMakeLists.txt  external_HlasmPlugin-JNI.cmake
parser_library/src/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzer_if.h  analyzing_context.h  aread_time.cpp  aread_time.h  common_structures.h  compiler_options.cpp  compiler_options.h  diagnosable.h  diagnosable_ctx.cpp  diagnosable_ctx.h  diagnosable_impl.h  diagnostic.cpp  diagnostic.h  diagnostic_adder.cpp  diagnostic_adder.h  diagnostic_collector.cpp  diagnostic_collector.h  diagnostic_consumer.h  diagnostic_op.cpp  diagnostic_op.h  diagnostic_tools.cpp  diagnostic_tools.h  document.cpp  document.h  ebcdic_encoding.cpp  ebcdic_encoding.h  empty_parse_lib_provider.cpp  empty_parse_lib_provider.h  error_messages.h  error_strategy.h  fade_messages.cpp  fade_messages.h  file.h  file_impl.cpp  file_impl.h  file_manager.h  file_manager_impl.cpp  (+45 more)
parser_library/test/: CMakeLists.txt  aread_time_test.cpp  asm_instr_check_test.h  asm_instr_diag_test.cpp  asm_instr_diag_test.h  async_macro_parsing.cpp  benchmark_test.cpp  benchmark_test.h  ca_instr_test.cpp  ca_instr_test.h  common_testing.cpp  common_testing.h  compare_unordered_vectors.h  context_test.cpp  context_test.h  copy_mock.h  copy_test.h  data_attribute_test.h  data_attributes.h  data_definition_check_test.cpp  data_definition_check_test.h  data_definition_common.h  data_definition_integer_test.h  data_definition_length_test.cpp  data_definition_length_test.h  data_definition_scale_test.h  data_definition_test.cpp  data_definition_test.h  dc_test.h  debug_event_consumer_s_mock.h  debugger_test.cpp  debugger_test.h  diagnosable_ctx_test.cpp  diagnosable_ctx_test.h  diagnostics_check.h  diagnostics_check_test.cpp  diagnostics_check_test.h  diagnostics_sysvar_test.cpp  equ_test.h  extension_handling_test.cpp  (+41 more)
private_test/: CMakeLists.txt
private_test/test/: test.cpp
utils/: CMakeLists.txt
utils/include/: CMakeLists.txt
utils/src/: CMakeLists.txt  content_loader.cpp  emscripten_path.cpp  encoding.cpp  filesystem_content_loader.cpp  insist.cpp  native_path.cpp  path.cpp  path_conversions.cpp  platform.cpp  resource_location.cpp  string_operations.cpp  text_convertor.cpp  time.cpp  unicode_text.cpp  utf8text.cpp
utils/test/: CMakeLists.txt  bk_tree_test.cpp  encoding_test.cpp  filter_vector_test.cpp  levenshtein_distance_test.cpp  merge_sorted_test.cpp  path_conversions_test.cpp  path_test.cpp  platform_test.cpp  resource_location_test.cpp  task_test.cpp  text_convertor_test.cpp  time_test.cpp  unicode_text_test.cpp
(+1240 files in other folders)
